--- a/index.html
+++ b/index.html
@@ -5,14 +5,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Juma Muborak</title>
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
   <link rel="stylesheet" href="css/col.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
+    <section>
+      <video src="video/smoke.mp4" autoplay muted></video>
+      <h1>
+        <span>J</span>
+        <span>U</span>
+        <span>M</span>
+        <span>A</span>
+        <span> </span>
+        <span>M</span>
+        <span>U</span>
+        <span>B</span>
+        <span>O</span>
+        <span>R</span>
+        <span>A</span>
+        <span>K</span>
+      </h1>
+    </section>
   <script src="js/main.js"></script>
 </body>
 
